Fixes border-radius for pillar buttons and text-align: center according to Zeplin

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -394,16 +394,17 @@ img.mob-menu {
     text-align: center;
   }
 
-  p{
+  p {
     margin: 20px 0 40px;
     min-height: 12.5em;
+    text-align: center;
   }
 }
 
 .pillar-links {
   text-align: center;
   a {
-    border-radius: 8px;
+    border-radius: 4px;
     border: 1px solid #d62470;
     background-color: #df2375;
     font-size: 16px;
